# cmake-template_simple-library

./: AUTHOR  CMakeLists.txt  README  README.textile  fileList.cmake
cmake/: build_config.cmake  macro.cmake  simple-libraryConfig.cmake
include/: Dummy.hpp
src/: Dummy.cpp
